--- a/ng-reactive-survey/src/styles.scss
+++ b/ng-reactive-survey/src/styles.scss
@@ -30,3 +30,7 @@ button:focus, button:active:focus, button.active:focus {
   outline: none !important;
   outline-style: none !important;
 }
+
+.hidden {
+  visibility: hidden;
+}
