--- a/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
+++ b/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
@@ -1,19 +1,27 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark mb-2'>
   <a class='navbar-brand' routerLink='/'>Survey app</a>
-  <button class='navbar-toggler' type='button' data-toggle='collapse' data-target='#navbarNavAltMarkup'
-          aria-controls='navbarNavAltMarkup' aria-expanded='false' aria-label='Toggle navigation'>
+  <button class='navbar-toggler collapsed' type='button' data-toggle='collapse' data-target='#navbarNav'
+          aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation'>
     <span class='navbar-toggler-icon'></span>
   </button>
-  <div *ngIf='user$ | async' class='collapse navbar-collapse' id='navbarNavAltMarkup'>
-    <div class='navbar-nav'>
-      <a class='nav-link' routerLink='/survey/my-surveys' routerLinkActive='active'>My surveys</a>
-      <a class='nav-link' routerLink='./survey/pending-surveys' routerLinkActive='active'>Pending surveys</a>
-      <a class='nav-link' routerLink='./survey/taken-surveys' routerLinkActive='active'>Taken surveys</a>
-      <a class='nav-link' routerLink='/user/my-profile' routerLinkActive='active'>My profile</a>
+  <div *ngIf='user$ | async as user' class='collapse navbar-collapse justify-content-between' id='navbarNav'>
+    <ul class='navbar-nav'>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink='/survey/my-surveys' routerLinkActive='active'>My surveys</a>
+      </li>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink='./survey/pending-surveys' routerLinkActive='active'>Pending surveys</a>
+      </li>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink='./survey/taken-surveys' routerLinkActive='active'>Taken surveys</a>
+      </li>
+      <li class='nav-item'>
+        <a class='nav-link' routerLink='/user/my-profile' routerLinkActive='active'>My profile</a>
+      </li>
+    </ul>
+    <div class='flex-column-reverse'>
+      Hello {{user}}!
+      <button mat-stroked-button (click)='logout()'>Logout</button>
     </div>
-  </div>
-  <div *ngIf='user$ | async as user'>
-    Hello {{user}}!
-    <button mat-stroked-button (click)='logout()'>Logout</button>
   </div>
 </nav>
