--- a/ng-reactive-survey/src/app/survey/pages/taken-surveys-list/taken-surveys-list.page.html
+++ b/ng-reactive-survey/src/app/survey/pages/taken-surveys-list/taken-surveys-list.page.html
@@ -1,34 +1,38 @@
-<h2 *ngIf='dataSource.count() === 0 && (dataSource.loading$ | async) === false'>No taken surveys!</h2>
+<ng-container *ngrxLet='dataSource.loading$ as loading'>
 
-<div [class.hidden]='!(dataSource.count() > 0 && (dataSource.loading$ | async) === false)'>
-  <div class='mat-elevation-z8'>
 
-    <table mat-table [dataSource]='dataSource'>
+  <h2 *ngIf='dataSource.count() === 0 && loading === false'>No taken surveys!</h2>
 
-      <ng-container matColumnDef='rowNumber'>
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
-      </ng-container>
+  <div [class.hidden]='!(dataSource.count() > 0 && loading === false)'>
+    <div class='mat-elevation-z8'>
 
-      <ng-container matColumnDef='surveyTitle'>
-        <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef='let element'>
-          <a [routerLink]='getRouterLink(element.id)'>{{element.surveyTitle}}</a>
-        </td>
-      </ng-container>
+      <table mat-table [dataSource]='dataSource'>
 
-      <ng-container matColumnDef='dateTaken'>
-        <th mat-header-cell *matHeaderCellDef>Date taken</th>
-        <td mat-cell *matCellDef='let element'> {{element.dateTaken | date: 'yyyy-MM-dd'}} </td>
-      </ng-container>
+        <ng-container matColumnDef='rowNumber'>
+          <th mat-header-cell *matHeaderCellDef>#</th>
+          <td mat-cell *matCellDef='let element; let i = index'> {{i + 1}} </td>
+        </ng-container>
 
-      <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
-      <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
-    </table>
+        <ng-container matColumnDef='surveyTitle'>
+          <th mat-header-cell *matHeaderCellDef>Title</th>
+          <td mat-cell *matCellDef='let element'>
+            <a [routerLink]='getRouterLink(element.id)'>{{element.surveyTitle}}</a>
+          </td>
+        </ng-container>
 
-    <mat-paginator [length]='length$ | async'
-                   [pageSize]='5'
-                   [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
+        <ng-container matColumnDef='dateTaken'>
+          <th mat-header-cell *matHeaderCellDef>Date taken</th>
+          <td mat-cell *matCellDef='let element'> {{element.dateTaken | date: 'yyyy-MM-dd'}} </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+        <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+      </table>
+
+      <mat-paginator [length]='length$ | async'
+                     [pageSize]='5'
+                     [pageSizeOptions]='[5, 10, 20]' showFirstLastButtons></mat-paginator>
+    </div>
   </div>
-</div>
 
+</ng-container>
