--- a/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
+++ b/ng-reactive-survey/src/app/navigation/components/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class='navbar navbar-expand-lg navbar-dark bg-dark mb-2'>
-  <a class='navbar-brand' routerLink='/'>Survey app</a>
+  <a class='navbar-brand logo' routerLink='/'>Survey app</a>
   <button class='navbar-toggler collapsed' type='button' data-toggle='collapse' data-target='#navbarNav'
           aria-controls='navbarNav' aria-expanded='false' aria-label='Toggle navigation'>
     <span class='navbar-toggler-icon'></span>
