--- a/ng-reactive-survey/src/app/security/components/register/register.component.html
+++ b/ng-reactive-survey/src/app/security/components/register/register.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]='form' (ngSubmit)='register()'>
+<form autocomplete="off" [formGroup]='form' (ngSubmit)='register()'>
 
   <mat-form-field>
     <label>Username:</label>
