--- a/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
+++ b/ng-reactive-survey/src/app/take-survey/components/survey-renderer/survey-renderer.component.html
@@ -4,7 +4,7 @@
     <h3>{{surveyStructure.description}}</h3>
   </mat-card>
 
-  <form [formGroup]='form'>
+  <form autocomplete="off" [formGroup]='form'>
     <mat-card class='my-2' *ngFor='let question of surveyStructure.questions'>
       <div>
         <h3>{{question.name}}</h3>
